# teste-globo

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 03ef83aea86e_initial_migration.py  50a2ff055283_add_created_at_and_updated_at_to_videos.py
src/: database.py  main.py  models.py
src/auth/: router.py  schemas.py  service.py
src/tests/: test_user_service.py
src/user/: router.py  schemas.py  service.py
src/videos/: router.py  schemas.py  service.py
