[tool.poetry]
name = "teste-globo-api"
version = "0.1.0"
description = ""
authors = ["vhforbes <vhforbes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
