[tool.poetry]
name = "teste-globo-api"
version = "0.1.0"
description = ""
authors = ["vhforbes <vhforbes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
pymysql = "^1.1.1"
cryptography = "^43.0.1"
passlib = "^1.7.4"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
